--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<span>0</span>
 		<canvas height="1080" width="1920"></canvas>
 		<script src="script.js"></script>
 	</body>
